# RAG

./: .env.example  .gitignore  Dockerfile  README.md  URLs base conocimiento.txt  docker_compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build-and-push.yml  ci-cd.yml  pr-checks.yml
data/: summaries.json
data/optimized_chunks/: Procedimiento de empleo seguro__chunk_0001.txt  Procedimiento de empleo seguro__chunk_0002.txt  Procedimiento de empleo seguro__chunk_0003.txt  Procedimiento de empleo seguro__chunk_0004.txt  Procedimiento de empleo seguro__chunk_0005.txt  Procedimiento de empleo seguro__chunk_0006.txt  Procedimiento de empleo seguro__chunk_0007.txt  Procedimiento de empleo seguro__chunk_0008.txt  Procedimiento de empleo seguro__chunk_0009.txt  Procedimiento de empleo seguro__chunk_0010.txt  Procedimiento de empleo seguro__chunk_0011.txt  Procedimiento de empleo seguro__chunk_0012.txt  Procedimiento de empleo seguro__chunk_0013.txt  Procedimiento de empleo seguro__chunk_0014.txt  Procedimiento de empleo seguro__chunk_0015.txt  Procedimiento de empleo seguro__chunk_0016.txt  Procedimiento de empleo seguro__chunk_0017.txt  Procedimiento de empleo seguro__chunk_0018.txt  Procedimiento de empleo seguro__chunk_0019.txt  Procedimiento de empleo seguro__chunk_0020.txt  Procedimiento de empleo seguro__chunk_0021.txt  Procedimiento de empleo seguro__chunk_0022.txt  Procedimiento de empleo seguro__chunk_0023.txt  Procedimiento de empleo seguro__chunk_0024.txt  Procedimiento de empleo seguro__chunk_0025.txt  Procedimiento de empleo seguro__chunk_0026.txt  Procedimiento de empleo seguro__chunk_0027.txt  Procedimiento de empleo seguro__chunk_0028.txt  Procedimiento de empleo seguro__chunk_0029.txt  Procedimiento de empleo seguro__chunk_0030.txt  Procedimiento de empleo seguro__chunk_0031.txt  Procedimiento de empleo seguro__chunk_0032.txt  Procedimiento de empleo seguro__chunk_0033.txt  Procedimiento de empleo seguro__chunk_0034.txt  Qué es el phishing y cómo protegerse__chunk_0001.txt  Qué es el phishing y cómo protegerse__chunk_0002.txt  Qué es el phishing y cómo protegerse__chunk_0003.txt  Qué es el phishing y cómo protegerse__chunk_0004.txt  Qué es el phishing y cómo protegerse__chunk_0005.txt  Qué es el phishing__chunk_0001.txt  (+4 more)
rag_app/: app.py  main.py
scripts/: create_langchain_index.py  create_llamaindex_indes.py  create_qdrant_index.py  prepare_data.py  preprocessing.py  routing_generation.py  run_full_pipeline.ps1
src/: Preguntas de prueba.txt  app.py  main.py
src/Evaluacion_modulo_10___BBDD_Vectoriales.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/api/: router_clients.py  router_langchain.py  (+2 more)
tests/: conftest.py  test_main.py  test_rag.py  test_routers.py
(+13 files in other folders)
