[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Evaluacion-modulo-10---BBDD-Vectoriales"
version = "0.1.0"
description = "End2EndFlow"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.117.1,<1.0.0",
    "google-genai>=1.38.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-google-genai>=2.1.12",
    "langchain-qdrant>=0.2.1",
    "llama-index>=0.14.2",
    "llama-index-embeddings-google-genai>=0.3.1",
    "llama-index-llms-google-genai>=0.5.1",
    "llama-index-vector-stores-qdrant>=0.8.5",
    "python-dotenv>=1.0.1",
    "pytest==8.2.0",
    "pypdf>=6.1.0",
    "qdrant-client==1.15.1",
    "ruff==0.4.3",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Ignorar errores de posición de importación (E402) y excepciones genéricas (E722)
ignore = ["E402", "E722"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.4.3",
]
