[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-rag-api"
version = "0.1.0"
description = "RAG API de phishing con LangChain + Qdrant + Gemini"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.117.1,<1.0.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=2.1.12",
    "langchain-qdrant>=0.2.1",
    "langchain-text-splitters>=0.3.11",
    "pypdf>=6.1.0",
    "python-dotenv>=1.0.1",
    "qdrant-client==1.15.1",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[tool.uv]
package = false

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]
